added social media icons

--- a/index.html
+++ b/index.html
@@ -354,64 +354,65 @@ left: 33%;
 
 
 
-      <section class="ftco-section">
-        <div class="container">
-          <div class="row justify-content-center mb-5 pb-3">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <p></p>
-              <p></p>
-              <p></p>
-              <h2 class="mb-4">The Team</h2>
-              <p>Meet the team behind SuiSense.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-              <div class="ftco-staff">
-                <img src="images/team/ayaanpic.png" alt="Template">
-                <h3>Ayaan<br>Haque</h3>
-                <strong class="role">Fullstack, Backend</strong>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-              <div class="ftco-staff">
-                <img src="images/team/vijarjpic.png" alt="Template">
-                <h3>Viraaj<br>Reddi</h3>
-                <strong class="role">Fullstack, Backend</strong>
-
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-              <div class="ftco-staff">
-                <img src="images/team/adithyapic.png" alt="Template">
-                <br>
-                <h3>Adithya<br>Peruvemba</h3>
-                <strong class="role">Frontend, UI Developer</strong>
-
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-              <div class="ftco-staff">
-                <img src="images/team/ishaanpic.png" alt="Template">
-                <h3>Ishaan<br>Bhandari</h3>
-                <strong class="role">Frontend, UI Developer</strong>
-                <!--
-                <div class='testingDiv'>
-                <a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a>
-                <a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a>
-                <a href="mailto: ishaanbhandari0@gmail.com"><i class="icon-inbox"></i></a>
-                <a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a>
-              </div>
-            -->
-                </div>
-
-
-
-
-              </div>
-            </div>
-          </div>
-        </section>
+        <div id="ftco-about">
+      		<div class="container">
+      			<div class="row animate-box">
+      				<div class="col-md-8 col-md-offset-2 text-center ftco-heading">
+      					<h2>Our Team</h2>
+      				</div>
+      			</div>
+      			<div class="row">
+      				<div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+      					<div class="ftco-staff">
+      						<img src="images/team/ayaanpic.png" alt="Template">
+      						<h3>Ayaan <br> Haque</h3>
+      						<strong class="role">Fullstack, Backend</strong>
+      						<ul class="ftco-social-icons">
+      							<li><a href="https://www.facebook.com/viraaj.reddi.1"><i class="icon-facebook"></i></a></li>
+      							<li><a href="#https://github.com/ayaanzhaque"><i class="icon-github"></i></a></li>
+      							<li><a href="https://www.instagram.com/yaanhaque/"><i class="icon-instagram"></i></a></li>
+      						</ul>
+      					</div>
+      				</div>
+      				<div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+      					<div class="ftco-staff">
+      						<img src="images/team/vijarjpic.png" alt="Template">
+      						<h3>Viraaj <br> Reddi</h3>
+      						<strong class="role">Fullstack, Backend</strong>
+      						<ul class="ftco-social-icons">
+      							<li><a href="https://www.facebook.com/yaanhawk"><i class="icon-facebook"></i></a></li>
+      							<li><a href="#https://github.com/viraajreddi"><i class="icon-github"></i></a></li>
+      							<li><a href="https://www.instagram.com/viraajreddi/"><i class="icon-instagram"></i></a></li>
+      						</ul>
+      					</div>
+      				</div>
+      				<div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+      					<div class="ftco-staff">
+      						<img src="images/team/adithyapic.png" alt="Template">
+      						<h3>Adithya Peruvemba</h3>
+      						<strong class="role">Frontend, UI Developer</strong>
+      						<ul class="ftco-social-icons">
+      							<li><a href="https://www.facebook.com/adithya.peruvemba.3"><i class="icon-facebook"></i></a></li>
+      							<li><a href="#https://github.com/adithyap7"><i class="icon-github"></i></a></li>
+      							<li><a href="https://www.instagram.com/adithya_sp"><i class="icon-instagram"></i></a></li>
+      						</ul>
+      					</div>
+      				</div>
+      				<div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+      					<div class="ftco-staff">
+      						<img src="images/team/ishaanpic.png" alt="Template">
+      						<h3>Ishaan Bhandari</h3>
+      						<strong class="role">Frontend, UI Developer</strong>
+      						<ul class="ftco-social-icons">
+      							<li><a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a></li>
+      							<li><a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a></li>
+      							<li><a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a></li>
+      						</ul>
+      					</div>
+      				</div>
+      			</div>
+      		</div>
+      	</div>
 
 <style>
 .testingDiv {
