fixed diagnosis page

--- a/analysis2.html
+++ b/analysis2.html
@@ -54,20 +54,7 @@
 	  </nav>
     <!-- END nav -->
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <center>
-        <div class="text mt-4">
-          <!-- <div class='testingthis'>
-            <div class='col-sm-8'>
-          <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Advanced Analysis</b></span></h1>
-          <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-        </div>
-        </div>
-      </div> -->
-        </center>
-      </div>
-    </div>
+
 
 <style>
 .jumbotron {
@@ -87,23 +74,24 @@ left: 33%;
 }
 </style>
 
+<div class="jumbotron jumbotron-fluid">
+  <div class="hero-wrap js-fullheight">
+    <div class="overlay"></div>
+    <div class="container-fluid px-0">
+      <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
+        <img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/diagnosispic.png" alt="">
+        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
-    <div class="hero-wrap js-fullheight">
-      <div class="overlay"></div>
-      <div class="container-fluid px-0">
-      	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/benchguy.png" alt="">
-	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
+          <div class="text mt-5">
+            <span class="subheading">Home -> Diagnosis</span>
+            <h1 class="mb-3" style='color: white !important;'> <span>Diagnosis</span></h1>
 
-	        	<div class="text mt-5">
-	        		<span class="subheading">Home -> Advanced Analysis</span>
-	            <h1 class="mb-3" style='color: white !important;'> <span>Advanced Analysis</span></h1>
-
-	          </div>
-	        </div>
-	    	</div>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
+</div>
 
 
 
