fixed other pages

--- a/analysis2.html
+++ b/analysis2.html
@@ -83,8 +83,8 @@ left: 33%;
         <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
           <div class="text mt-5">
-            <span class="subheading">Home -> Diagnosis</span>
-            <h1 class="mb-3" style='color: white !important;'> <span>Diagnosis</span></h1>
+            <span class="subheading">Home -> Advanced Analysis</span>
+            <h1 class="mb-3" style='color: white !important;'> <span>Advanced Analysis</span></h1>
 
           </div>
         </div>
