--- a/pairings.html
+++ b/pairings.html
@@ -47,17 +47,21 @@
     <!-- END nav -->
 
     <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <center>
-        <div class="text mt-4">
-          <!-- <div class='testingthis'>
-            <div class='col-sm-8'>
-          <h1 class="mb-3"><span> <b style='font-size: 65px !important;'>Support</b></span></h1>
-          <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+      <div class="hero-wrap js-fullheight">
+        <div class="overlay"></div>
+        <div class="container-fluid px-0">
+          <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
+            <img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/diagnosispic.png" alt="">
+            <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
+
+              <div class="text mt-5">
+                <span class="subheading">Home -> Support</span>
+                <h1 class="mb-3"> <span>Support</span></h1>
+
+              </div>
+            </div>
+          </div>
         </div>
-        </div> -->
-      </div>
-        </center>
       </div>
     </div>
 
@@ -78,23 +82,6 @@ top: 30%;
 left: 33%;
 }
 </style>
-
-
-    <div class="hero-wrap js-fullheight">
-      <div class="overlay"></div>
-      <div class="container-fluid px-0">
-      	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/realsupportpic.png" alt="">
-	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
-
-	        	<div class="text mt-5">
-	        		<span class="subheading">Home -> Support</span>
-	            <h1 class="mb-3"> <span>Support</span></h1>
-	          </div>
-	        </div>
-	    	</div>
-      </div>
-    </div>
 
 
 
