--- a/index.html
+++ b/index.html
@@ -51,21 +51,8 @@
 	  </nav>
     <!-- END nav -->
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <center>
-        <div class="text mt-4">
-          <!-- <div class='testingthis'>
-            <div class='col-sm-8'>
-          <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="50px" style='vertical-align: 0%;'> <b style='font-size: 65px !important;'>SuiSense</b></span></h1>
-          <p style='font-size: 20px !important;'>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-          <p><a href="analysis.html" class="btn btn-primary px-5 py-3">Get Started</a></p>
-        </div>
-        </div> -->
-      </div>
-        </center>
-      </div>
-    </div>
+
+
 
 <style>
 .jumbotron {
@@ -85,25 +72,27 @@ left: 33%;
 }
 </style>
 
+<div class="jumbotron jumbotron-fluid">
+  <div class="hero-wrap js-fullheight">
+    <div class="overlay"></div>
+    <div class="container-fluid px-0">
+      <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
+        <img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/diagnosispic.png" alt="">
+        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
-    <div class="hero-wrap js-fullheight">
-      <div class="overlay"></div>
-      <div class="container-fluid px-0">
-        <div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-          <img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/altDiagnosis.png" alt="">
+          <div class="text mt-5">
+            <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px" style='vertical-align: middle;'>SuiSense</span></h1>
+            <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+            <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
 
-          <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
-
-            <div class="text mt-4">
-              <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px">SuiSense</span></h1>
-              <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-              <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
-
-            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+
 
     <section class="ftco-section services-section bg-light">
       <div class="container">
