--- a/index.html
+++ b/index.html
@@ -345,7 +345,9 @@ left: 33%;
       		<div class="container">
       			<div class="row animate-box">
       				<div class="col-md-8 col-md-offset-2 text-center ftco-heading">
+        
       					<h2>Our Team</h2>
+
       				</div>
       			</div>
       			<div class="row">
@@ -376,7 +378,7 @@ left: 33%;
       				<div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
       					<div class="ftco-staff">
       						<img src="images/team/adithyapic.png" alt="Template">
-      						<h3>Adithya Peruvemba</h3>
+      						<h3>Adithya<br>Peruvemba</h3>
       						<strong class="role">Frontend, UI Developer</strong>
       						<ul class="ftco-social-icons">
       							<li><a href="https://www.facebook.com/adithya.peruvemba.3"><i class="icon-facebook"></i></a></li>
@@ -388,7 +390,7 @@ left: 33%;
       				<div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
       					<div class="ftco-staff">
       						<img src="images/team/ishaanpic.png" alt="Template">
-      						<h3>Ishaan Bhandari</h3>
+      						<h3>Ishaan<br>Bhandari</h3>
       						<strong class="role">Frontend, UI Developer</strong>
       						<ul class="ftco-social-icons">
       							<li><a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a></li>
