Updated Diagnosis Name

--- a/analysis.html
+++ b/analysis.html
@@ -44,7 +44,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
+	          <li class="nav-item active"><a href="analysis.html" class="nav-link">Initial Analysis</a></li>
             <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
@@ -81,8 +81,8 @@
             <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
               <div class="text mt-5">
-                <span class="subheading">Home -> Diagnosis</span>
-                <h1 class="mb-3" style='color: white !important;'> <span>Diagnosis</span></h1>
+                <span class="subheading">Home -> Initial Analysis</span>
+                <h1 class="mb-3" style='color: white !important;'> <span>Initial Analysis</span></h1>
 
               </div>
             </div>
@@ -153,7 +153,7 @@
             <h2 class="ftco-heading-2">Navigational</h2>
             <ul class="list-unstyled">
               <li><a href="index.html" class="py-2 d-block">Home</a></li>
-              <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
+              <li><a href="analysis.html" class="py-2 d-block">Initial Analysis</a></li>
               <li><a href="analysis2.html" class="py-2 d-block">Advanced Analysis</a></li>
               <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
               <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
