--- a/analysis2.html
+++ b/analysis2.html
@@ -44,7 +44,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="analysis.html">Diagnosis</a></li>
+            <li class="nav-item"><a class="nav-link" href="analysis.html">Initial Analysis</a></li>
 	          <li class="nav-item active"><a href="analysis2.html" class="nav-link">Advanced Analysis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
@@ -436,7 +436,7 @@ left: 33%;
             <h2 class="ftco-heading-2">Navigational</h2>
             <ul class="list-unstyled">
               <li><a href="index.html" class="py-2 d-block">Home</a></li>
-              <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
+              <li><a href="analysis.html" class="py-2 d-block">Initial Analysis</a></li>
               <li><a href="analysis2.html" class="py-2 d-block">Advanced Analysis</a></li>
               <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
               <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
