--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
+	          <li class="nav-item"><a href="analysis.html" class="nav-link">Initial Analysis</a></li>
             <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
@@ -345,7 +345,7 @@ left: 33%;
       		<div class="container">
       			<div class="row animate-box">
       				<div class="col-md-8 col-md-offset-2 text-center ftco-heading">
-        
+
       					<h2>Our Team</h2>
 
       				</div>
@@ -503,7 +503,7 @@ left: 33%;
               <h2 class="ftco-heading-2">Navigational</h2>
               <ul class="list-unstyled">
                 <li><a href="index.html" class="py-2 d-block">Home</a></li>
-                <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
+                <li><a href="analysis.html" class="py-2 d-block">Initial Analysis</a></li>
                 <li><a href="analysis2.html" class="py-2 d-block">Advanced Analysis</a></li>
                 <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
                 <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
