--- a/pairings.html
+++ b/pairings.html
@@ -326,7 +326,7 @@ display: center;
     <div class="row justify-content-center mb-5 pb-3">
       <div class="col-md-7 text-center heading-section ftco-animate">
         <h2 class="mb-4">Your Map</h2>
-        <p>i like ya cut g</p>
+        <p> Find a therapist for your loved one using our vetted map of local therapists. Click on the pin to view the address and contact information of the therapist to make an informed decision. </p>
       </div>
       <iframe
   width="120%"
