fixed order of models

--- a/analysis2.html
+++ b/analysis2.html
@@ -102,8 +102,10 @@ left: 33%;
           <center>
             <span><b>NOTE: Page is under serious development. Model and general analysis process are not up to date. Please check back in the future for a fully functional version.</b></span>
             <br><br>
-          <h2 class="mb-4">Classify Your Messages</h2>
-          <p>Please fill out the form below with text that you copied from a message or remembered hearing. Make sure the text is over 70 words, or you will get an inaccurate result.</p>
+          <h2 class="mb-4">Determine Stage of Depression</h2>
+          <p>Finally, please fill out the form below with text that you copied from a message or remembered hearing. We require atleast 3 messages,
+            and if you want more, just put two in one text box. This test will allow you to determine which stage of depression your
+            loved one is on based on a 6 stage scale created by Professor Jesse Berring.</p>
           <hr>
           </center>
         </div>
@@ -111,7 +113,7 @@ left: 33%;
     </div>
 <center>
 
-  <iframe src="https://suisense.pythonanywhere.com/advancedprogression" width="100%" height="600" frameBorder="0"></iframe>
+  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe>
 
     </center>
   </section>
