--- a/analysis.html
+++ b/analysis.html
@@ -99,8 +99,8 @@
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
             <br><br>
-          <h2 class="mb-4">Determine Depression Stage</h2>
-          <p>Please fill out the form below with text that you copied from a message or remembered hearing. NOTE: The text currently only works for text under 128 words. We are working to rectify this at the moment.</p>
+          <h2 class="mb-4">Initial Screening</h2>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing. This screening will determine whether your loved one is likely depressed or suicidal. NOTE: The text currently only works for text under 128 words. We are working to rectify this at the moment.</p>
           <hr>
           </center>
         </div>
@@ -108,7 +108,27 @@
     </div>
 
 
-  <iframe src="https://suisense.pythonanywhere.com/progression" width="100%" height="900" frameBorder="0"></iframe>
+  <iframe src="https://suisense.pythonanywhere.com/standard" width="100%" height="900" frameBorder="0"></iframe>
+
+    </center>
+  </section>
+
+  <section class="ftco-section">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-7 text-center heading-section ftco-animate">
+          <center>
+            <br><br>
+          <h2 class="mb-4">Baseline Screening</h2>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing before your loved one had a change in attitude. This will help us determine a more accurate assessment since we can compare the changes in their texts and tone. This screening will determine whether your loved one is likely depressed or suicidal. NOTE: The text currently only works for text under 128 words. We are working to rectify this at the moment.</p>
+          <hr>
+          </center>
+        </div>
+      </div>
+    </div>
+
+
+  <iframe src="https://suisense.pythonanywhere.com/advancedprogression" width="100%" height="900" frameBorder="0"></iframe>
 
     </center>
   </section>
