--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ left: 33%;
 
 
 
-    <section class="ftco-section services-section bg-light">
+    <section class="ftco-section services-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
