--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@ left: 33%;
         <div id="ftco-about">
       		<div class="container">
       			<div class="row animate-box">
-      				<div class="col-md-8 col-md-offset-2 text-center ftco-heading">
+      				<div class="col-md-12 col-md-offset-2 text-center ftco-heading">
 
-      					<h2>Our Team</h2>
+      					<h1>The Team</h1> <br>
 
       				</div>
       			</div>
