--- a/index.html
+++ b/index.html
@@ -450,11 +450,12 @@ left: 33%;
     						<div class="col-md-6">
     							<div class="card">
 						        <div class="card-header">
-										<a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I navigate through the site? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
+										<a class="card-link" data-toggle="collapse"  href="#menu4" aria-expanded="false" aria-controls="menu4">How do I navigate through the application? <span class="collapsed"><i class="ion-ios-arrow-up"></i></span><span class="expanded"><i class="ion-ios-arrow-down"></i></span></a>
 						        </div>
 						        <div id="menu4" class="collapse">
 						          <div class="card-body">
-												<p>To use this site, you either directly type in a post or message from your friend. You will then receive an prediction on whether your friend is just suffering from depression or if they are suicidal. You will then go to the map and will be able to find local therapists near you. For additional support, go to the forum to ask for help or support.
+												<p>Our application allows you to effectively screen and determine whether your loved one is depressed of suicidal. To begin, you can upload texts and messages from your friend to our model, which will provide a preliminary diagnosis on whether they are depressed or suicidal.
+                          To receive a more accurate diagnosis, you can provide previous messages before a change in mood or tone was noticed, and our model can then more accurately determine the progression of their depression. You can also use our questionnaire based analysis for more familiar diagnosis.
 </p>
 						          </div>
 						        </div>
