--- a/index.html
+++ b/index.html
@@ -92,44 +92,51 @@ left: 33%;
   </div>
 </div>
 
-
-
-    <section class="ftco-section services-section">
-      <div class="container">
-      	<div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Our Mission</h2>
-                    </div>
-        </div>
+<section class="ftco-section ftco-no-pt ftc-no-pb bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 py-5">
         <div class="row">
-          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-flex align-items-center">
-              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
+          <div class="col-md-6 ftco-animate">
+            <div class="media block-6 services border text-left">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="flaticon-cloud-computing"></span>
+              </div>
+              <div class="mt-3 media-body media-body-2">
                 <h3 class="heading">The Importance</h3>
-                <p class="mb-0">In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.
-
+                <p>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-flex align-items-center">
-              <div class="media-body pl-4">
+          <div class="col-md-6 ftco-animate">
+            <div class="media block-6 services border text-left">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="flaticon-cloud"></span>
+              </div>
+              <div class="mt-3 media-body media-body-2">
                 <h3 class="heading">Depression vs Suicide</h3>
-                <p class="mb-0">Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
+                <p> Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-flex align-items-center">
-              <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
+          <div class="col-md-6 ftco-animate">
+            <div class="media block-6 services border text-left">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="flaticon-server"></span>
+              </div>
+              <div class="mt-3 media-body media-body-2">
                 <h3 class="heading">Friends and Family</h3>
-                <p> People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. Since all interactions are happening online, understanding your friend's mental health through interactions, so understanding their phrases and texts is the best way to understand their mental state.</p>
+                <p>People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. Since all interactions are happening online, understanding your friend's mental health through interactions, so understanding their phrases and texts is the best way to understand their mental state.</p>
               </div>
             </div>
           </div>
-					<div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-flex align-items-center">
-              <div class="media-body pl-4">
+
+          <div class="col-md-6 ftco-animate">
+            <div class="media block-6 services border text-left">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="flaticon-customer-service"></span>
+              </div>
+              <div class="mt-3 media-body media-body-2">
                 <h3 class="heading">Early Detection</h3>
                 <p>It is very important that messages hinting at suicidal intentions are recognized right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression. Especially due to COVID since hospitals and doctors are overloaded, people can't get the support that they need. Thus, having early detection online is the best way to help these people. </p>
               </div>
@@ -137,7 +144,16 @@ left: 33%;
           </div>
         </div>
       </div>
-    </section>
+      <div class="col-lg-6 py-5">
+        <img src="images/therapist.jpg" class="img-fluid" alt="">
+        <div class="heading-section ftco-animate mt-5">
+          <h2 class="mb-4">Our Process</h2>
+          <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section class="ftco-section ftco-counter img" id="section-counter">
     	<div class="container">
