--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ left: 33%;
       <div class="col-lg-6 py-5">
         <img src="images/therapist.jpg" class="img-fluid" alt="">
         <div class="heading-section ftco-animate mt-5">
-          <h2 class="mb-4">Our Process</h2>
+          <h2 class="mb-4">Our Mission</h2>
           <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
         </div>
       </div>
