--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ left: 33%;
   </div>
 </div>
 
-<section class="ftco-section ftco-no-pt ftc-no-pb bg-light">
+<section class="ftco-section ftco-no-pt ftc-no-pb ">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 py-5">
