--- a/index.html
+++ b/index.html
@@ -94,44 +94,38 @@ left: 33%;
 
 <section class="ftco-section ftco-no-pt ftc-no-pb ">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-7 py-5">
-        <div class="row">
-          <div class="col-md-6 ftco-animate">
-            <div class="media block-6 services border text-left">
-              <div class="icon d-flex align-items-center justify-content-center">
-                <span class="flaticon-cloud-computing"></span>
-              </div>
-              <div class="mt-3 media-body media-body-2">
-                <h3 class="heading">The Importance</h3>
-                <p>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 ftco-animate">
-            <div class="media block-6 services border text-left">
-              <div class="icon d-flex align-items-center justify-content-center">
-                <span class="flaticon-cloud"></span>
-              </div>
-              <div class="mt-3 media-body media-body-2">
-                <h3 class="heading">Depression vs Suicide</h3>
-                <p> Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-5 py-5">
+    <div class='row'>
+      <div class="col-md-6 ftco-animate">
         <img src="images/therapist.jpg" class="img-fluid" alt="">
         <div class="heading-section ftco-animate mt-5">
           <h2 class="mb-4">Our Mission</h2>
           <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
         </div>
       </div>
-
-
-      <div class="col-lg-6 py-5">
-        <div class="row">
+    <div class="col-md-3 ftco-animate">
+      <div class="media block-6 services border text-left">
+        <div class="icon d-flex align-items-center justify-content-center">
+          <span class="flaticon-cloud-computing"></span>
+        </div>
+        <div class="mt-3 media-body media-body-2">
+          <h3 class="heading">The Importance</h3>
+          <p>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 ftco-animate">
+      <div class="media block-6 services border text-left">
+        <div class="icon d-flex align-items-center justify-content-center">
+          <span class="flaticon-cloud"></span>
+        </div>
+        <div class="mt-3 media-body media-body-2">
+          <h3 class="heading">Depression vs Suicide</h3>
+          <p> Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</p>
+        </div>
+      </div>
+    </div>
+</div>
+    <div class='row'>
       <div class="col-md-6 ftco-animate">
         <div class="media block-6 services border text-left">
           <div class="icon d-flex align-items-center justify-content-center">
@@ -143,11 +137,6 @@ left: 33%;
           </div>
         </div>
       </div>
-    </div>
-  </div>
-
-      <div class="col-lg-6 py-5">
-        <div class="row">
       <div class="col-md-6 ftco-animate">
         <div class="media block-6 services border text-left">
           <div class="icon d-flex align-items-center justify-content-center">
@@ -160,12 +149,71 @@ left: 33%;
         </div>
       </div>
     </div>
-  </div>
-
     </div>
-  </div>
 </section>
 
+<!--
+
+<section class="ftco-section ftco-no-pt ftc-no-pb ">
+  <div class="container">
+    <div class='row'>
+      <div class="col-lg-6 py-5">
+        <img src="images/therapist.jpg" class="img-fluid" alt="">
+        <div class="heading-section ftco-animate mt-5">
+          <h2 class="mb-4">Our Process</h2>
+          <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+        </div>
+      </div>
+      <div class="col-md-3 ftco-animate">
+      						<div class="media block-6 services border text-left">
+  		            	<div class="icon d-flex align-items-center justify-content-center">
+  		            		<span class="flaticon-cloud-computing"></span>
+  		            	</div>
+  		              <div class="mt-3 media-body media-body-2">
+  		                <h3 class="heading">Primary Diagnosis</h3>
+  		                <p>Using our basic NLP model, a friend can paste or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   </p>
+  		              </div>
+  		            </div>
+      					</div>
+                <div class="col-md-3 ftco-animate">
+              						<div class="media block-6 services border text-left">
+          		            	<div class="icon d-flex align-items-center justify-content-center">
+          		            		<span class="flaticon-cloud"></span>
+          		            	</div>
+          		              <div class="mt-3 media-body media-body-2">
+          		                <h3 class="heading">Progression Model</h3>
+          		                <p> We also have a progression model which classifies the patient into one of 6 different cateogries based on Jessie Bering's classification which gives a more specific diagnosis for the patient.</p>
+          		              </div>
+          		            </div>
+              					</div>
+    </div>
+  <div class='row'>
+    <div class="col-md-6 ftco-animate">
+    						<div class="media block-6 services border text-left">
+		            	<div class="icon d-flex align-items-center justify-content-center">
+		            		<span class="flaticon-server"></span>
+		            	</div>
+		              <div class="mt-3 media-body media-body-2">
+		                <h3 class="heading">Locating Therapists</h3>
+		                <p>The friend will be able to visit the map embedded within the website to see pairings with local therapists and create an effective support system for the struggling person. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+		              </div>
+		            </div>
+    					</div>
+              <div class="col-md-6 ftco-animate">
+                <div class="media block-6 services border text-left">
+                  <div class="icon d-flex align-items-center justify-content-center">
+                    <span class="flaticon-customer-service"></span>
+                  </div>
+                  <div class="mt-3 media-body media-body-2">
+                    <h3 class="heading">Getting Support</h3>
+                    <p>Friends and patients can consult qualified therapists on valuable questions they may not know the answer to through our forum feature. We hope to build an inclusive community where everyone can feel safe. </p>
+                  </div>
+                </div>
+              </div>
+  </div>
+    </div>
+</section>
+-->
     <section class="ftco-section ftco-counter img" id="section-counter">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
@@ -218,13 +266,6 @@ left: 33%;
     	<div class="container">
     		<div class="row">
     			<div class="col-lg-6 py-5">
-    				<img src="images/therapist.jpg" class="img-fluid" alt="">
-    				<div class="heading-section ftco-animate mt-5">
-	            <h2 class="mb-4">Our Process</h2>
-	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
-	          </div>
-    			</div>
-    			<div class="col-lg-6 py-5">
     				<div class="row">
     					<div class="col-md-6 ftco-animate">
     						<div class="media block-6 services border text-left">
@@ -273,6 +314,13 @@ left: 33%;
               </div>
     				</div>
           </div>
+          <div class="col-lg-6 py-5">
+    				<img src="images/therapist.jpg" class="img-fluid" alt="">
+    				<div class="heading-section ftco-animate mt-5">
+	            <h2 class="mb-4">Our Process</h2>
+	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+	          </div>
+    			</div>
     		</div>
     	</div>
     </section>
