--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ left: 33%;
 
 
 
-        <div id="ftco-about">
+        <!--<div id="ftco-about">
       		<div class="container">
       			<div class="row animate-box">
       				<div class="col-md-12 col-md-offset-2 text-center ftco-heading">
@@ -476,7 +476,7 @@ left: 33%;
       				</div>
       			</div>
       		</div>
-      	</div>
+      	</div>-->
 
 <style>
 .testingDiv {
@@ -486,7 +486,7 @@ left: 33%;
 }
 </style>
 
-    <section class="ftco-section bg-light">
+    <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
