--- a/index.html
+++ b/index.html
@@ -333,9 +333,7 @@ left: 33%;
             <p></p>
             <p></p>
             <h2 class="mb-4">Consultants and Advisors</h2>
-            <p>Throughout development, SuiSense has consulted with psychologists to understand the issues facing depressed and suicidal teens.
-              These consultants and their professional experience has been instrumental in helping our team understand the foundational problems and the most effective ways
-              to approach them.
+            <p>Throughout development, SuiSense has consulted with these psychologists with professional experience to understand the issues facing depressed and suicidal teens.
             </p>
           </div>
         </div>
@@ -347,10 +345,8 @@ left: 33%;
               <br>
               <h3><a>Consultant: </a><a href="https://www.psychologytoday.com/us/therapists/paul-marcille-saratoga-ca/76403">Paul Marcille</a></h3>
               <strong class="role" >Psychologist, PhD, Santa Clara County</strong>
-                <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-                  He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
-                  Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution.
-                  Dr. Marcille has supported our concept and we are currently working towards validating and implementing our solution.
+                <p>Dr. Marcille is a licensed psychologist with 35 years of experience working as a therapist, university professor and administrator. He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University. Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution. Dr. Marcille has supported our concept, and we are currently working towards validating and implementing our solution with his guidance.
+
                 </p>
               </div>
             </div>
@@ -360,11 +356,9 @@ left: 33%;
                 <br>
                 <br>
                 <h3><a>Advisor: </a><a href="https://www.psychologytoday.com/us/therapists/marilee-ruebsamen-saratoga-ca/170844">Marilee Ruebsamen</a></h3>
-                <strong class="role">Psychologist, PhD</strong>
-                <p>Dr. Reubsamen is a Psychologist who founded the global humanitarian psychological project called the "Always Be Listening Global Initiative", works with adolescents and families in the Bay Area. She is part of Abbey Blue Canoe Open Path Collective, an organization reserved for marginalized "uprooted" "traveling children" (UN).
-                  Not only does she work internationally, she works with adolescents in the Bay Area, including ones from our school Saratoga High School.
-                  Dr. Reubsamen is our advisor, and as our advisor, she has helped us form our problem statement and refine our solution. She has promoted our service and helps us with outreach and implementation.
-                  She has connected us with potential users and is currently working with us to implement our algorithm.
+                <strong class="role">Psychologist, PhD, Bay Area</strong>
+                <p>Dr. Ruebsamen is a licensed Bay Area psychologist who founded the "Always Be Listening Global Initiative", a global humanitarian psychological project working with adolescents and families. She is also part of Abbey Blue Canoe Open Path Collective, a United Nations organization for uprooted children. As our advisor, Dr. Ruebsamen helped us identify our target group, refine our process to be as effective as possible, and improve outreach and implementation. In addition, she is connecting us with potential users and assisting us in implementing our algorithm.
+rrently working with us to implement our algorithm.
                 </p>
 
               </div>
