--- a/index.html
+++ b/index.html
@@ -372,8 +372,7 @@ rrently working with us to implement our algorithm.
           <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <h2 class="mb-4">Partnerships</h2>
-              <p>SuiSense proudly has built partnerships with local student-led organizations in order to maximize our impact. Currently, we are working with our high school and have established partnerships with two
-                local organizations. These partnerships are key in order to implement our solution, and we have made successful progress.
+              <p>SuiSense proudly has built partnerships with local student-led organizations in order to maximize our impact and implement our solution.
               </p>
             </div>
           </div>
@@ -384,10 +383,7 @@ rrently working with us to implement our algorithm.
                 <br>
                 <br>
                 <h3><a href="https://capmovement.org/" style="font-size: 25px;">Children's Addiction Prevention Association</a></h3>
-                  <p>Founded in April 2020 by passionate high schoolers, the Children's Addiction Prevention Association (CAPA) hopes to prevent drug abuse among teenagers.
-                    By focusing on elementary school students, we aim to provide the future generation with the tools for careful decision-making.
-                    SuiSense has been promoted and supported by the chapters of CAPA, and the userbase of SuiSense has grown as a result. SuiSense has been presented
-                    at CAPA events, and many neighbooring schools have begun to show their support.
+                  <p>The Children's Addiction Prevention Association (CAPA) is a 501(c)(3) nonprofit that hopes to prevent drug abuse among teenagers. Their process hopes to provide the future generation with the tools for careful decision-making. Dr. Ruebsamen indicated that drug abuse is strongly related with depression, so we sought out to build a partnership with CAPA, as our missions align. CAPA has promoted and supported SuiSense, and the user base of SuiSense has grown as a result. CAPA has presented SuiSense at their events, and neighboring schools have begun showing interest.
                   </p>
                 </div>
               </div>
@@ -397,9 +393,7 @@ rrently working with us to implement our algorithm.
                   <br>
                   <br>
                   <h3><a href="https://themhi.netlify.app/">Mental Health Initiative</a></center></h3>
-              <p>A youth based organization founded in June of 2020, Mental Health Initiative (MHI) is a nonprofit dedicated to eliminating the single story surrounding a typical bay area student stereotype.
-                The team is highly motivated to expunging the common stigma around mental health issues in the Bay Area and bridging the wide
-                gap between parents and students regarding mental health problems. Our partnership has helped promote both our services, and we have grown both of our followings. SuiSense has been supported through events, such as ones held by TAB at the Saratoga Library.
+              <p>The Mental Health Initiative (MHI) is a Bay Area organization dedicated to eliminating the single story surrounding a typical bay area student stereotype. MHI is highly motivated in dismantling the stigma around mental health problems in the Bay Area and bridging the gap between parents and students regarding important mental health problems. To promote mental wellbeing, we established a partnership with MHI in order to increase our impact and user base. SuiSense has been supported and promoted at MHI’s local events and meetings, such as those at the Saratoga Library.
               </p>
 
                 </div>
