--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@ left: 33%;
 		            		<span class="flaticon-cloud-computing"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Primary Diagnosis</h3>
-		                <p>Using our basic NLP model, a friend can paste or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   </p>
+		                <h3 class="heading">Initial Diagnosis</h3>
+		                <p>Using our initial NLP model, friends, family, and therapists can paste or write out text, and will be able to determine if their friend is suffering depression or is on the suicidal side. This provides important initial screening which determines the fine line between depression and suicide.</p>
 		              </div>
 		            </div>
     					</div>
@@ -284,8 +284,8 @@ left: 33%;
 		            		<span class="flaticon-cloud"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Progression Model</h3>
-		                <p> We also have a progression model which classifies the patient into one of 6 different cateogries based on Jessie Bering's classification which gives a more specific diagnosis for the patient.</p>
+		                <h3 class="heading">Baseline Testing</h3>
+		                <p> To personalize our screening to each patient, we intake previous messages from before a patient indicated a change in mood or attitude. This allows our models to make a personalized diagnosis based on their previous state and determine how much they have changed over a period of time.</p>
 		              </div>
 		            </div>
     					</div>
@@ -295,8 +295,8 @@ left: 33%;
 		            		<span class="flaticon-server"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Locating Therapists</h3>
-		                <p>The friend will be able to visit the map embedded within the website to see pairings with local therapists and create an effective support system for the struggling person. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+		                <h3 class="heading">Stage Progresion</h3>
+		                <p>Our progression model which classifies the patient into one of 6 different categories based on Jessie Bering's classification which gives a more specific diagnosis for the patient. By intaking multiple messages, we are able to determine which stage a patient is on based on a standard and commonly used scale.</p>
 		              </div>
 		            </div>
     					</div>
@@ -308,7 +308,7 @@ left: 33%;
                   </div>
                   <div class="mt-3 media-body media-body-2">
                     <h3 class="heading">Getting Support</h3>
-                    <p>Friends and patients can consult qualified therapists on valuable questions they may not know the answer to through our forum feature. We hope to build an inclusive community where everyone can feel safe. </p>
+                    <p>Friends and family are able to visit the local map we provide to find therapists for their loved one. Using our pairing algorithm, we are able to pair individual patients to therapists that fit their needs the most, based on parameters provided by our certified therapist consultants and advisors. </p>
                   </div>
                 </div>
               </div>
