updated our mission

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ left: 33%;
         <img src="images/therapist.jpg" class="img-fluid" alt="">
         <div class="heading-section ftco-animate mt-5">
           <h2 class="mb-4">Our Mission</h2>
-          <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+          <p>We are an initial screening service that efficiently helps concerned friends and family recognize depressed and suicidal tendencies in their loved ones. Using Artificial Intelligence and Natural Language Processing, we build on existing products to come up with a unique and unprecedented solution to this pressing issue.</p>
         </div>
       </div>
     <div class="col-md-3 ftco-animate">
