updated our process

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ left: 33%;
     				<img src="images/therapist.jpg" class="img-fluid" alt="">
     				<div class="heading-section ftco-animate mt-5">
 	            <h2 class="mb-4">Our Process</h2>
-	            <p>We are a one stop shop for detecting suicidal and depressive tendencies and providing personalized support for those struggling with mental health. We are powered by AI/ML, NLP, and other algorithms to provide tailored diagnoses and support.</p>
+	            <p>We use Natural Language Processing and AI to tackle problems with diagnosing depression and suicidality. Our solution provides key insights into patients based on the phrases they say, which has been proven to be an effective way to diagnose depression and suicidality, but with NLP, we leverage data to determine the fine lines between the two.</p>
 	          </div>
     			</div>
     		</div>
